force-app/main/default/objects/cgcloud__Query_Parameter__mdt/cgcloud__Query_Parameter__mdt.object-meta.xml
<CustomObject>
    <description>Represent a parameter defined for a query</description>
    <label>Query Parameter</label>
    <pluralLabel>Query Parameters</pluralLabel>
</CustomObject>