force-app/main/default/objects/cgcloud__Query_Parameter__mdt/fields/cgcloud__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Value__c</fullName>
    <description>Default Value for this parameter.</description>
    <label>Default Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>