force-app/main/default/objects/cgcloud__Query_Parameter__mdt/fields/cgcloud__Parameter_Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parameter_Order__c</fullName>
    <description>This field dictates which parameter that will be used in query conditions.</description>
    <inlineHelpText>Order must start with 0. Must be unique per query definition. No two parameters should share the same parameter order. 
Parameter Order 0 corresponds to {0}, Parameter Order 1 corresponds to {1} in Query Conditions...etc</inlineHelpText>
    <label>Parameter Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>