force-app/main/default/objects/cgcloud__Query_Parameter__mdt/fields/cgcloud__Parameter_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parameter_Type__c</fullName>
    <label>Parameter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
                <default>true</default>
                <label>Static</label>
            </value>
            <value>
                <fullName>UI Driven</fullName>
            </value>
            <value>
                <fullName>Contextual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>