force-app/main/default/objects/cgcloud__Query_Parameter__mdt/fields/cgcloud__Parameter_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parameter_Value__c</fullName>
    <description>Represents parameter value. This is only used if Parameter Type is not dynamic</description>
    <label>Parameter Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>