force-app/main/default/objects/cgcloud__Query_Parameter__mdt/fields/cgcloud__Query_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Query_Definition__c</fullName>
    <label>Query Definition</label>
    <referenceTo>cgcloud__Query_Definition__mdt</referenceTo>
    <relationshipLabel>Query Parameters</relationshipLabel>
    <relationshipName>Query_Parameters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>