force-app/main/default/objects/cgcloud__Query_Parameter__mdt/fields/cgcloud__Requires_Single_Quotation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Requires_Single_Quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Single Quotation</label>
    <type>Checkbox</type>
</CustomField>