force-app/main/default/objects/cgcloud__Query_Parameter__mdt/listViews/cgcloud__All_Parameter_View.listView-meta.xml
<ListView>
    <fullName>cgcloud__All_Parameter_View</fullName>
    <columns>cgcloud__Parameter_Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>cgcloud__Parameter_Type__c</columns>
    <columns>cgcloud__Parameter_Value__c</columns>
    <columns>cgcloud__Requires_Single_Quotation__c</columns>
    <columns>cgcloud__Query_Definition__c</columns>
    <columns>cgcloud__Default_Value__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Parameter View</label>
    <language>en_US</language>
</ListView>